Adding a figure and updating regression notes

--- a/pca-and-cancer-detection.ipynb
+++ b/pca-and-cancer-detection.ipynb
@@ -335,12 +335,27 @@
     "\n",
     "* One way to increase the perimeter without increasing the area is to give the mass tall and skinny spikes protruding from its border; the perimeter is increased by traveling up and down the spikes, while minimal area is gained since the spikes are so thin. In this sense, `perimeter_mean` on its own can be a metric for how much zigzagging occurs on the breast mass's border.\n",
     "\n",
-    "* Therefore, the second principal component could be described as \"overall spikey-ness or fuziness of the tumor's border.\"\n",
+    "* Therefore, the second principal component could be described as, \"overall spikey-ness or fuziness of the tumor's border.\"\n",
     "\n",
     "**Principal component analysis tells us these characteristics directly**. Again, this is real data, and the interpretation here is not biased by prior medical knowledge. However, if we then Google defining characteristics for determining benign or malignant breast tumors, we can see right away that two important hallmarks are a *tumor's size* (i.e. its area) and whether it has an *irregular shape with spiky or fuzzy edges*.\n",
     "\n",
-    "Note that the top PC score ($\\approx 2066.527$) is an order of magnitude larger than all the other singular values. This means that, while \"overall spikey-ness or fuziness\" the second-most important attribute, ultimately the first principal component (average tumor area) has the most influence over characterizing the dataset as a whole.\n"
+    "\n",
+    "\n",
+    "<p align = \"center\">  \n",
+    "<img src = \"figs/spiked-border.png\" alttext = \"Malignant mass with spiky or fuzzy edges\" \"Title\">\n",
+    "    (Image source: <a src = \"https://www.verywellhealth.com/thmb/1G2pSgO-RVxtN_3ohpCfbGlRIOM=/1333x1000/smart/filters:no_upscale()/breast-cancer-tumors-what-are-they-430277-v12-d91aad27f20b4f06aae6afc5a55868da.png\">here </a>)\n",
+    "</p>\n",
+    "\n",
+    "Note that the top PC score ($\\approx2066.527$) is an order of magnitude larger than all the other singular values. This means that, while \"overall spikey-ness or fuziness\" the second-most important attribute, ultimately the first principal component (average tumor area) has the most influence over characterizing the dataset as a whole.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b861681",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
