Adding section on when to use pca/SVD

--- a/pca-and-cancer-detection.ipynb
+++ b/pca-and-cancer-detection.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "30186e3a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "367500a2",
    "metadata": {},
    "outputs": [],
@@ -112,9 +112,7 @@
     "        X[:,feature_idx] = X[:,feature_idx] - np.mean(X[:,feature_idx])\n",
     "    return(X)\n",
     "\n",
-    "# Subtract off the mean of each feature i.e. subtract from each column the avg. of that column \n",
-    "for feature_idx in range(n):\n",
-    "    X[:,feature_idx] = X[:,feature_idx] - np.mean(X[:,feature_idx])"
+    "X = center_matrix(X)"
    ]
   },
   {
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7f1462c4",
    "metadata": {},
    "outputs": [],
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "531a4ffa",
    "metadata": {},
    "outputs": [
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "1489e04f",
    "metadata": {},
    "outputs": [
@@ -190,18 +188,14 @@
       " [-0.00002646 -0.00605095]\n",
       " [-0.00009217 -0.00574415]\n",
       " [-0.0000641  -0.00182303]\n",
-      " [ 0.00000156 -0.0021105 ]]\n",
-      "0.9976181424527256\n",
-      "0.8252637683444004\n"
+      " [ 0.00000156 -0.0021105 ]]\n"
      ]
     }
    ],
    "source": [
     "V = np.transpose(VT)\n",
     "# Show first two principal components of our data\n",
-    "print(V[:,:2])\n",
-    "print(max(abs(V[:,0])))\n",
-    "print(max(abs(V[:,1])))"
+    "print(V[:,:2])"
    ]
   },
   {
@@ -213,17 +207,19 @@
     "\n",
     "Suppose instead we use the eigendecomposition on the so-called *covariance matrix* $C$.  That is,\n",
     "\n",
-    "$$C := \\frac{1}{n-1} X^T X = V \\Lambda V^T  $$\n",
+    "$$C := X^T X = V \\Lambda V^T  $$\n",
     "\n",
-    "Note that the $\\frac{1}{n-1}$ factor is absorbed into $\\Lambda$. The PC scores $\\sigma_i$ of $X$ are related to the eigenvalues $\\lambda_i$ of $C$ by the relationship \n",
-    "$$\\sigma_i = \\sqrt{\\lambda_i}$$ \n",
+    "Note that the usual $\\frac{1}{n-1}$ factor is omitted, since it would have been absorbed into $\\Lambda$ and give an identical interpretation of the given data. \n",
     "\n",
-    "(As a technical aside, we know that the eigenvalues of $C$ are guaranteed to be non-negative, since $C$ will always be what we call a *symmetric positive semi-definite matrix*). We can compute the top two PC scores now."
+    "The PC scores $\\sigma_i$ of $X$ are related to the eigenvalues $\\lambda_i$ of $C$ by the relationship \n",
+    "$$\\sigma_i = \\sqrt{\\lambda_i}.$$ \n",
+    "\n",
+    "(As a technical aside, we know that the eigenvalues of $C$ are guaranteed to be real and non-negative, since $C$ is always what we call a *symmetric positive semi-definite matrix*). We can compute the top two PC scores now."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4a3833db",
    "metadata": {},
    "outputs": [
@@ -235,7 +231,7 @@
        "             0.010059  ,       0.00372349,       0.00126915])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "0cd1d670",
    "metadata": {},
    "outputs": [
@@ -284,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "31bcc939",
    "metadata": {},
    "outputs": [
@@ -350,9 +346,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30d7b2ed",
+   "metadata": {},
+   "source": [
+    "## 5. Which Method Should We Use in Principal Component Analysis?\n",
+    "\n",
+    "* For numerical accuracy, we generally prefer the SVD over an eigendecomposition in principal component analysis\n",
+    "* The reason is that the eigendecomposition involves computing the covariance matrix $C := X^T X$, which will often be more ill-conditioned than $X$ itself\n",
+    "* This ill-condtioning means that a computer's computation is more prone to numerical instability\n",
+    "* The singular value decomposition (SVD) is an alternative to the eigenvalue decomposition that is better for rank-defficient and ill-conditioned matrices.\n",
+    "* While computing the SVD is always numerically stable for any matrix, it is *typically more expensive* (slower) than other decompositions, e.g. the eigendecomposition.\n",
+    "* So there is a tradeoff between accuracy and speed.\n",
+    "\n",
+    "As an example, consider a data matrix\n",
+    "\n",
+    "$$ \\begin{pmatrix} 1 & 1 & 1 \\\\ \\epsilon & 0 & 0 \\\\ 0 & \\epsilon & 0 \\\\ 0 & 0 & \\epsilon \\end{pmatrix}.$$\n",
+    "This is sometimes called Läuchli matrix. Centering the matrix (that is, subtracting the column means) gives\n",
+    "\n",
+    "$$ X = \\begin{pmatrix}\\hphantom{-} \\frac{3 - \\epsilon}{4} & \\hphantom{-}  \\frac{3 - \\epsilon}{4}  & \\hphantom{-}  \\frac{3 - \\epsilon}{4}  \\\\ \n",
+    "\\hphantom{-}  \\frac{3 \\epsilon - 1}{4}  & -\\frac{1 + \\epsilon}{4} &  -\\frac{1 + \\epsilon}{4} \\\\  \n",
+    "-\\frac{1 + \\epsilon}{4} & \\hphantom{-} \\frac{3 \\epsilon - 1}{4} &  -\\frac{1 + \\epsilon}{4} \\\\  \n",
+    "-\\frac{1 + \\epsilon}{4} &  -\\frac{1 + \\epsilon}{4} & \\hphantom{-} \\frac{3 \\epsilon - 1}{4} \\end{pmatrix} $$\n",
+    "\n",
+    "Since this matrix is only \n",
+    "Its squared singular values are: $3+\\epsilon^2$, $\\epsilon^2$, and $\\epsilon^2$ again. Therefore, $\\sigma_1 = \\sqrt{3 + \\epsilon^2},$ and $\\sigma_2 = \\sigma_3 = \\epsilon.$ Taking $\\epsilon = 10^{-6}$, we can use the SVD and the eigendecomposition (EIG) to compute the PC scores. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b389d40a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_X_Lauchli(eps, matrix_size):\n",
+    "    top_row   = np.ones((1,matrix_size), dtype = np.float64) \n",
+    "    bottom    = eps * np.eye(matrix_size)\n",
+    "    X_Lauchli = np.vstack((top_row,bottom))\n",
+    "    X_Lauchli = center_matrix(X_Lauchli)              \n",
+    "    return(X_Lauchli)\n",
+    "\n",
+    "def compare_PC_scores(X, C):\n",
+    "    Lambda_EIG = np.linalg.eig(C)[0]\n",
+    "    Sigma_SVD  = np.linalg.svd(X)[1]\n",
+    "    print('PC scores from SVD: %s' % str(Sigma_SVD))\n",
+    "    print('PC scores from EIG: %s' % str(np.sqrt(Lambda_EIG)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4b61bb68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PC scores from SVD: [1.4999995e+00 1.0000000e-06 1.0000000e-06]\n",
+      "PC scores from EIG: [1.06065982e+00+0.00000000e+00j 7.07128932e-07+3.80137733e-11j\n",
+      " 7.07128932e-07-3.80137733e-11j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix_size = 3\n",
+    "np.set_printoptions(suppress = False)\n",
+    "eps = 1e-6;\n",
+    "X_Lauchli = make_X_Lauchli(eps,matrix_size)\n",
+    "C_Lauchli = 1/(matrix_size - 1) * np.transpose(X_Lauchli).dot(X_Lauchli)\n",
+    "compare_PC_scores(X_Lauchli, C_Lauchli)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb7567a",
+   "metadata": {},
+   "source": [
+    "Observe how the SVD computed the PC scores correctly; in particular, $\\sigma_2 = \\sigma_3 = 10^{-6}.$ While the eigendecomposition was close, the ill-conditioning of $X$ yielded a key issue: its interpreting the singular values as having imaginary components (indicated by the `j` terms in Python above). While these imaginary terms are tiny, this could easily break a system of code if these imaginary values are later fed into a function that expects them to be real-valued. \n",
+    "\n",
+    "In particular, we can observe in this case how the covariance matrix magnified the ill-conditioning of $X$. These condition numbers $\\kappa(X)$ and $\\kappa(C)$ are both huge, but the condition number for the covariance $C$ is orders of magnitude larger. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "92f23861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1499999.4999984999\n",
+      "2250420680254.3047\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linalg.cond(X_Lauchli))\n",
+    "print(np.linalg.cond(C_Lauchli))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b861681",
+   "id": "5b5946f2",
    "metadata": {},
    "outputs": [],
    "source": []
