--- a/pca-and-cancer-detection.ipynb
+++ b/pca-and-cancer-detection.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "The following data from University of Wisconsin is taken from digitized images of fine needle aspirates (FNA) of a breast mass for each patient. The features describe characteristics of the cell nuclei present in the image.\n",
     "\n",
-    "Source: https://www.kaggle.com/uciml/breast-cancer-wisconsin-data\n",
+    "Source: https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Prognostic%29\n",
     "\n",
     "In a study, there are many traits of a tumor that we can observe and measure. The following matrix is comprised of the data for the first 50 patients, who have a mix of benign and malignant tumors."
    ]
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1489e04f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4a3833db",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "             0.010059  ,       0.00372349,       0.00126915])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "0cd1d670",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "31bcc939",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b389d40a",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4b61bb68",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "92f23861",
    "metadata": {},
    "outputs": [
