Updating for WiDS 2021 workshop

--- a/pca-and-cancer-detection.ipynb
+++ b/pca-and-cancer-detection.ipynb
@@ -7,9 +7,15 @@
    "source": [
     "<h1> PCA with the SVD and Eigendecomposition</h1>\n",
     "\n",
-    "This is meant as a casual way to interact with some of the linear algebra concepts introduced in the course **Linear Algebra** in the [ICME Summer Workshops in Data Science](https://icme.stanford.edu/icme-summer-workshops-2021-fundamentals-data-science#LinAlg) (2021) series, taught by Professor Margot Gerritsen and Laura Lyman. \n",
+    "* Author: **Laura Lyman**, Stanford University, PhD Candidate\n",
+    "* **Last updated:** September 2021\n",
     "\n",
-    "If you have not interacted with a Jupyter notebook before, to execute a single code block (called a *cell*), press `Shift` followed by `Enter` on your machine. Keep in mind that some cells depend on variables defined in previous cells, so the code blocks should be executed in order. "
+    "This notebook is intended as a casual way to interact with some of the concepts behind principal component analysis. It is featured in a couple of my workshops in summer of 2021, namely:\n",
+    "\n",
+    "* the linear algebra course in the [ICME Summer Workshops in Data Science](https://icme.stanford.edu/icme-summer-workshops-2021-fundamentals-data-science#LinAlg) (2021) series, co-taught with Professor Margot Gerritsen, and\n",
+    "* the Women in Data Science (WiDS) [workshop](https://www.widsconference.org/workshops.html) \"What Would We Do Without Linear Algebra? Part III: Singular Value Decomposition and Principal Component Analysis.\" (The video will be uploaded to the [WiDS YouTube channel](https://www.youtube.com/playlist?list=PLHAk3jHXWpxI7fHw8m5PhrpSRpR3NIjQo) by the second week of October 2021.)\n",
+    "\n",
+    "When viewing this notebook on Github, you are doing so *statically,* as if it were a PDF. To interact with the contents, see the section [Interactive Modules](https://github.com/lalyman/lin-alg-workshop#interactive-modules) in the `README.md` file. To execute a single code block (called a *cell*), press `Shift` followed by `Enter` on your machine. Keep in mind that some cells depend on variables defined in previous cells, so the code blocks should be executed in order. "
    ]
   },
   {
@@ -23,7 +29,7 @@
     "import numpy as np\n",
     "import math\n",
     "# Optional; suppresses scientific notation\n",
-    "np.set_printoptions(suppress=True)"
+    "np.set_printoptions(suppress = True)"
    ]
   },
   {
@@ -35,7 +41,7 @@
     "\n",
     "Let's start off the morning with showing how even an *introductory* understanding of principal component analysis (pca) can help us understand some important real world examples. Say we are researching breast cancer. We are trying to understand the key characteristics of what makes a tumor cell benign (harmless) versus malignant (potentially dangerous). \n",
     "\n",
-    "The following data from University of Wisconsin is taken from digitized images of fine needle aspirates (FNA) of a breast mass for each patient. The features describe characteristics of the cell nuclei present in the image.\n",
+    "The following data from University of Wisconsin (1995) is taken from digitized images of fine needle aspirates (FNA) of a breast mass for each patient. The features describe characteristics of the cell nuclei present in the image.\n",
     "\n",
     "Source: https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Prognostic%29\n",
     "\n",
@@ -323,7 +329,7 @@
     "## 4. Interpretation \n",
     " * For the first principal component, we can see that it is dominated by its 4th entry with magnitude `0.99761814` (where we note that the maximum magnitude of any entry in $V$ can be 1, since $V$ is an orthogonal matrix). This means that the first principal component  is best described by the 4th feature, which is `area_mean` i.e. the average 2D area of the breast mass in the digitized images.\n",
     "\n",
-    "* For the second principal component, observe that it is biased toward the second and third variables (entries `-0.82526377` and `-0.560642`3, resp.), with all remaining values at least an order of magnitude smaller. This means the second principal component  &mdash; or our new characteristic describing these masses  &mdash; is a linear combination of `texture_mean` and `perimeter_mean`. In terms of the real world, what tumor characteristic describes a combination of `texture_mean` and `perimeter_mean`?\n",
+    "* For the second principal component, observe that it is biased toward the second and third variables (entries `0.82526377` and `0.5606423`, resp.), with all remaining values at least an order of magnitude smaller. This means the second principal component  &mdash; or our new characteristic describing these masses  &mdash; is a linear combination of `texture_mean` and `perimeter_mean`. In terms of the real world, what tumor characteristic describes a combination of `texture_mean` and `perimeter_mean`?\n",
     "\n",
     "* The variable `texture_mean` is the standard deviation of the grayscale values in the image, since topogrophy (or texture) is indicated by darker or ligher shading. Since this involves standard deviation, it means that a breast mass with a large `texture_mean` isn't necessarily large or tall; rather, its texture is non-uniform. Heuristically, we can imagine this as \"spikey-ness\", or an ill-defined and inconsistent border in its 3rd (vertical) dimension.\n",
     "\n",
@@ -369,13 +375,12 @@
     "-\\frac{1 + \\epsilon}{4} & \\hphantom{-} \\frac{3 \\epsilon - 1}{4} &  -\\frac{1 + \\epsilon}{4} \\\\  \n",
     "-\\frac{1 + \\epsilon}{4} &  -\\frac{1 + \\epsilon}{4} & \\hphantom{-} \\frac{3 \\epsilon - 1}{4} \\end{pmatrix} $$\n",
     "\n",
-    "Since this matrix is only \n",
     "Its squared singular values are: $3+\\epsilon^2$, $\\epsilon^2$, and $\\epsilon^2$ again. Therefore, $\\sigma_1 = \\sqrt{3 + \\epsilon^2},$ and $\\sigma_2 = \\sigma_3 = \\epsilon.$ Taking $\\epsilon = 10^{-6}$, we can use the SVD and the eigendecomposition (EIG) to compute the PC scores. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b389d40a",
    "metadata": {},
    "outputs": [],
@@ -396,20 +401,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4b61bb68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PC scores from SVD: [1.4999995e+00 1.0000000e-06 1.0000000e-06]\n",
-      "PC scores from EIG: [1.06065982e+00+0.00000000e+00j 7.07128932e-07+3.80137733e-11j\n",
-      " 7.07128932e-07-3.80137733e-11j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "matrix_size = 3\n",
     "np.set_printoptions(suppress = False)\n",
@@ -431,19 +426,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "92f23861",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1499999.4999984999\n",
-      "2250420680254.3047\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.linalg.cond(X_Lauchli))\n",
     "print(np.linalg.cond(C_Lauchli))"
